--- a/pm-template.latex
+++ b/pm-template.latex
@@ -1,4 +1,4 @@
-\documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$lang$,$endif$$if(papersize)$$papersize$,$endif$]{$documentclass$}
+\documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$lang$,$endif$$if(papersize)$$papersize$,$endif$$if(titlepage)$$titlepage$,$endif$]{$documentclass$}
 \usepackage{geometry} 		% 設定邊界
 \geometry{
   top=1in,
@@ -11,6 +11,7 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \usepackage[T1]{fontenc}
+\usepackage[compact]{titlesec}
 \usepackage{booktabs}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
@@ -34,7 +35,7 @@ $endif$
   \XeTeXlinebreaklocale "zh" 	% 針對中文自動換行
   \XeTeXlinebreakskip = 0pt plus 1pt % 字與字之間加入0pt至1pt的間距，確保左右對整齊
   \parindent 0em 		% 段落縮進
-  \setlength{\parskip}{20pt} 	% 段落之間的距離
+  \setlength{\parskip}{15pt} 	% 段落之間的距離
   \ifxetex
     \usepackage{xltxtra,xunicode}
   \fi
