--- a/pm-template.latex
+++ b/pm-template.latex
@@ -112,6 +112,8 @@ $endif$
             linkcolor=$if(linkcolor)$$linkcolor$$else$magenta$endif$,
             pdfborder={0 0 0}}
 \urlstyle{same}  % don't use monospace font for urls
+% smaller font size for code
+\renewenvironment{Shaded} {\begin{snugshade}\footnotesize} {\end{snugshade}}
 $if(links-as-notes)$
 % Make links footnotes instead of hotlinks:
 \renewcommand{\href}[2]{#2\footnote{\url{#1}}}
